--- a/b-admin-public/config.json
+++ b/b-admin-public/config.json
@@ -1,4 +1,4 @@
-﻿{
+{
 	"blockedScripts": [
 		[],
 		[],
@@ -8,36 +8,44 @@
 		[],
 		[]
 	],
-	"serverToken": "your_random_32_char_token_here",
 	"commandLevels": {
 		"kick": 1,
 		"msay": 1,
 		"scripts": 1,
 		"ban": 2,
 		"unban": 2,
+		"banip": 2,
+		"unbanip": 2,
 		"a": 1,
 		"announce": 1,
 		"blockscript": 1,
 		"makeadmin": 2,
 		"makemod": 2,
-		"demote": 2,
 		"trainers": 1,
 		"ip": 1,
 		"geoip": 2,
-		"reloadadmins": 2,
 		"reloadbans": 1,
 		"reloadplayers": 1,
 		"tempban": 1,
 		"listplayers": 1,
 		"disableweapons": 1,
 		"m": 1,
+		"w": 2,
 		"wsay": 2,
-		"emotes": 0,
-		"banlist": 1
+		"banlist": 1,
+		"lastbanip": 2,
+		"demote": 2,
+		"emotes": 0
 	},
 	"geoip": {
 		"countryFile": "geoip/GeoLite2-Country.mmdb",
 		"subDivisionFile": "geoip/GeoLite2-City.mmdb",
 		"cityFile": "geoip/GeoLite2-City.mmdb"
+	},
+
+	"encryption": {
+		"enabled": false,
+		"secret": "CHANGE_ME_TO_RANDOM_32+_CHARS",
+		"version": 1
 	}
 }
